==============
lxml changelog
==============

Under development
=================

Features added
--------------

* The ``docinfo`` on ElementTree objects has new properties ``internalDTD``
  and ``externalDTD`` that return a DTD object for the internal or external
  subset of the document respectively.

* Serialising an ElementTree now includes any internal DTD subsets that are
  part of the document, as well as comments and PIs that are siblings of the
  root node.

Bugs fixed
----------

* Parsing with the ``no_network`` option could fail

Other changes
-------------

* lxml now raises a TagNameWarning about tag names containing ':' instead of
  an Error as 1.3.3 did.  The reason is that a number of projects currently
  misuse the previous lack of tag name validation to generate namespace
  prefixes without declaring namespaces.  Apart from the danger of generating
  broken XML this way, it also breaks most of the namespace-aware tools in
  XML, including XPath, XSLT and validation.  lxml 1.3.x will continue to
  support this bug with a Warning, while lxml 2.0 will be strict about
  well-formed tag names (not only regarding ':').

* Serialising an Element no longer includes its comment and PI siblings (only
  ElementTree serialisation includes them).


1.3.3 (2007-07-26)
==================

Features added
--------------

* ElementTree compatible parser ``ETCompatXMLParser`` strips processing
  instructions and comments while parsing XML

* Parsers now support stripping PIs (keyword argument 'remove_pis')

* ``etree.fromstring()`` now supports parsing both HTML and XML, depending on
  the parser you pass.

* Support ``base_url`` keyword argument in ``HTML()`` and ``XML()``

Bugs fixed
----------

* Parsing from Python Unicode strings failed on some platforms

* ``Element()`` did not raise an exception on tag names containing ':'

* ``Element.getiterator(tag)`` did not accept ``Comment`` and
  ``ProcessingInstruction`` as tags. It also accepts ``Element`` now.

